trunk/Archive2/b2/3ec3f9a2566d7c/output
main.cpp: In function 'int main()':
main.cpp:7:12: error: call of overloaded 'f(const char [4])' is ambiguous
     f("lol");
            ^
main.cpp:7:12: note: candidates are:
main.cpp:2:6: note: void f(const char*) [with <template-parameter-1-1> = void]
 void f(const char*) {}
      ^
main.cpp:4:6: note: void f(CharT (&)[N]) [with CharT = const char; long unsigned int N = 4ul] <deleted>
 void f(CharT (&)[N]) = delete;
      ^
