trunk/Archive2/b2/3ec3f9a2566d7c/main.cpp
template<typename = void>
void f(const char*) {}
template<typename CharT, decltype(sizeof(0)) N>
void f(CharT (&)[N]) = delete;

int main() {
    f("lol");
}